# karmakadabra

./: .dockerignore  .env.local.example  .env.secrets.example  .gitignore  .gitmodules  ACONTEXT-INTEGRATION.md  AGENT_BUYER_SELLER_PATTERN.md  AGENT_STARTUP_FIX.md  ANALYSIS.md  ARCHITECTURE.md  AUDIT_FINDINGS_2025-10-27.md  AWS_FACILITATOR_INFRASTRUCTURE_EXTRACTION.md  BASE_SEPOLIA_DEPLOYMENT_ADDRESSES.md  BASE_SEPOLIA_DEPLOYMENT_PLAN.md  BASE_USDC_BUG_INVESTIGATION_REPORT.md  CLAUDE.md  CRITICAL_BLOCKER_2025-10-27.md  DAILY_CHECKIN_2025-10-26.md  DEMO_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DOCKER_AND_PORT_UPDATE_SUMMARY.md  DOCKER_GUIDE.md  DOTENV_INLINE_COMMENT_BUG.md  Dockerfile.agent  Dockerfile.community  Dockerfile.irc-commander  Dockerfile.openclaw  ENV_FILES_UPDATE_NOTE.md  ENV_STANDARDIZATION_UPDATE.md  EXTRACTION_MASTER_PLAN_TERRAFORM_ANALYSIS.md  FACILITATOR_CLEANUP_PLAN.md  FACILITATOR_EXTRACTION_MASTER_PLAN.md  FACILITATOR_SECRETS_MIGRATION.md  GLUE_PAYMENT_DEBUG_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  IRC_LOGGING_SUMMARY.md  LICENSE  MANUAL_VERIFICATION_INSTRUCTIONS.md  (+36 more)
.claude/: irc-config.json
abracadabra-agent/: .env.example  README.md  main.py  requirements.txt  test_abracadabra.py
agent-cards/: 0xdream_sgo.json  0xjuandi.json  0xkysaug.json  0xmabu_.json  0xpineda.json  0xsoulavax.json  0xyuls.json  abu_ela.json  (+14 more)
docs/irc-logging-poc/: Cargo.toml  FIXES_AND_NEXT_STEPS.md  INDEX.md  QUICKSTART_DALNET.md  README.md  TROUBLESHOOTING_DALNET.md  X402_INTEGRATION_GUIDE.md  test.ps1  test.sh
docs/irc-logging-poc/src/: main.rs
(+1818 files in other folders)
