[package]
name = "irc-logging-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies (matches x402-rs)
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# IRC client
irc = "1.0.0"

# Utilities
regex = "1.11.1"
once_cell = "1.21.3"
